--- a/src/main/resources/telegram.properties
+++ b/src/main/resources/telegram.properties
@@ -1,5 +1,6 @@
-bot.name=----
-bot.token=----
-bot.email.to=-----
-bot.email.from=bot@prog.kiev.ua
+bot.name=training_javabot_bot
+bot.token=7141251927:AAEwMzZ-xbUPHW8_guk3BNiM5MnbmwzWg-o
+
+bot.email.to=dimabelasnik6@gmail.com
+bot.email.from=dima.dog3@gmail.com
 bot.email.subject=New applications
