--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,14 @@
-spring.mail.host=----
-spring.mail.port=25
-spring.mail.username=----
-spring.mail.password=----
+# SMTP / POP3, IMAP
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=dima.dog3@gmail.com
+spring.mail.password=28102002fp,erf
 spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+server.port=8888
